# msrv-vlm

./: .gitignore  Dockerfile  README.md  app.py  client.py  deployment.yaml  docker-compose.yml  pyproject.toml
vlm_analysis/: vlm.py
